--- a/index.html
+++ b/index.html
@@ -68,6 +68,80 @@
             <img src="./img/first-man.png" alt="first-man">
         </div>
     </section>
+    <section class="container subscribe">
+        <div>
+            <img src="./img/second-man.png" alt="second-man">
+
+        </div>
+        <div>
+            <h2 class="subscribe-title">
+                Subscription index
+            </h2>
+            <form>
+                <input class="input" type="email" placeholder="Email">
+                <button class="button button-violet">
+                    Try
+                </button>
+            </form>
+        </div>
+    </section>
+    <section class="container plan">
+        <h2 class="plan-title">
+            Get the right plan for future
+        </h2>
+        <div class="plan-flex">
+            <div class="item">
+                <p class="item-text">Starter</p>
+                <h3 class="item-title">
+                    Free
+                </h3>
+                <ul>
+                    <li class="item-li">1 Website</li>
+                    <li class="item-li">5 GB Hosting</li>
+                    <li class="item-li">Limited Support</li>
+                    <button class="button button-item">
+                        Get Started
+                    </button>
+                </ul>
+
+
+            </div>
+             <div class="item">
+                <p class="item-text">Premium</p>
+                <h3 class="item-title">
+                    $29 <span>/month</span>
+                </h3>
+                <ul>
+                    <li class="item-li">10 Website</li>
+                    <li class="item-li">15 GB Hosting</li>
+                    <li class="item-li">Premium Support</li>
+                    <button class="button button-item">
+                        Get Started
+                    </button>
+                </ul>
+
+
+            </div>
+             <div class="item">
+                <p class="item-text">Enterprise</p>
+                <h3 class="item-title">
+                    $49<span>/month</span>
+                </h3>
+                <ul>
+                    <li class="item-li">Unlimited Website</li>
+                    <li class="item-li">50 GB Hosting</li>
+                    <li class="item-li">Premium Support</li>
+                    <button class="button button-item">
+                        Get Started
+                    </button>
+                </ul>
+
+
+            </div>
+        </div>
+        
+
+    </section>
     <footer class="footer">
         <div class="container footer-flex">
             <div>
